# raytracer_cpu

./: .clang-format  .env  README.md  build.sh  compile_commands.json
cmake/: CMakeLists.txt
cmake/cmake_files/Ninja/Debug/clang++/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
cmake/cmake_files/Ninja/Debug/g++/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
cmake/cmake_files/Ninja/Release/clang++/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
cmake/cmake_files/Ninja/Release/g++/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
cmake/cmake_files/Unix Makefiles/Debug/clang++/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cmake/cmake_files/Unix Makefiles/Debug/g++/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cmake/cmake_files/Unix Makefiles/Release/clang++/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cmake/cmake_files/Unix Makefiles/Release/g++/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
src/Application/: gui.cpp  gui.hpp  main.cpp
src/core/: DebugConsole.cpp  DebugConsole.hpp  camera.cpp  camera.hpp  color.hpp  interval.cpp  interval.hpp  ray.cpp  ray.hpp  vec3.hpp
src/hittable/: aabb.cpp  aabb.hpp  bvh.cpp  bvh.hpp  hitRecord.hpp  hittable.hpp  hittableList.cpp  hittableList.hpp  quad.cpp  quad.hpp  sphere.cpp  sphere.hpp
src/scenes/: S_earth.hpp  (+6 more)
(+113 files in other folders)
